--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Fair Trade Coffee Co</title>
+    <title>Fair Trade Coffee</title>
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="css/style.css">
 </head>
