--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="menu.html">Menu</a>
-            <a href="">About</a>
+            <a href="about.html">About</a>
         </nav>
     </header>
     <main>
         <div class="hero">
             <img src="images/counter.jpg" alt="" aria-hidden="true">
             <div class="hero-text">
-                <h1>Fair Trade Coffee Co</h1>
+                <h1>Fair Trade Coffee</h1>
                 <p>Indianapolis Coffee Destination</p>
             </div>
         </div>
